# PyRev

./: .gitignore  README.md  pyproject.toml  setup.py
pyrev/cpp/: bitboard.h  config.cpp  config.h
pyrev/cpp/utils/: crc32.h
