[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrev"
version = "0.1.0"
description = "A Reversi library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
    "cython>=3.2.3",
    "setuptools>=75.3.2",
]
